--- a/css/style.css
+++ b/css/style.css
@@ -81,3 +81,14 @@ a, a:visited {
   top: 60px;
   bottom: 0;
 }
+
+#fog {
+  background-image: url(../img/fog.png);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  background-size: 200% 200%;
+  background-position: 0px 0px;
+  opacity: 0.6;
+}
